[gd_scene load_steps=24 format=3 uid="uid://m7wixgukxlb3"]

[ext_resource type="Script" path="res://assets/scripts/nucleo_02/actividad_01.gd" id="1_bn6hl"]
[ext_resource type="PackedScene" uid="uid://sxca04083gd4" path="res://scenes/titila.tscn" id="2_eddk7"]
[ext_resource type="Texture2D" uid="uid://oeb2t3ruleqs" path="res://img/nucleo_02/actividad_01/combinacion_datos.png" id="2_l1d4a"]
[ext_resource type="Theme" uid="uid://bm1ub45g4i7os" path="res://themes/ai_theme.tres" id="3_4ix6s"]
[ext_resource type="Texture2D" uid="uid://d216cu3rlddqv" path="res://img/nucleo_02/actividad_01/cargando_datos.png" id="3_op6nt"]
[ext_resource type="Texture2D" uid="uid://do3b0t7tn7grd" path="res://img/nucleo_02/actividad_01/contenedor_camara.png" id="4_gh16w"]
[ext_resource type="Texture2D" uid="uid://dsik7lljdkowd" path="res://img/nucleo_02/actividad_01/contenedor_diciembre.png" id="5_oj36e"]
[ext_resource type="PackedScene" uid="uid://bgs2ty3i0fjmf" path="res://scenes/elementos/boton_s.tscn" id="5_omwwq"]
[ext_resource type="Texture2D" uid="uid://ltklj61u3u24" path="res://img/nucleo_02/actividad_01/contenedor_flyer.png" id="6_5u413"]
[ext_resource type="PackedScene" uid="uid://bv8bnjs72yogm" path="res://scenes/actividades/destino.tscn" id="6_cqges"]
[ext_resource type="Texture2D" uid="uid://cbk4xflg4fdbk" path="res://img/nucleo_02/actividad_01/destino_camara.png" id="7_ags83"]
[ext_resource type="Texture2D" uid="uid://bynnrll5n31xl" path="res://img/nucleo_02/actividad_01/destino_flyer.png" id="8_s6inh"]
[ext_resource type="Texture2D" uid="uid://b3ldrcwjce0nf" path="res://img/nucleo_02/actividad_01/destino_diciembre.png" id="9_qb0r0"]
[ext_resource type="Texture2D" uid="uid://k88ptmeiso2v" path="res://img/nucleo_02/actividad_01/resultado.png" id="10_gs1t7"]
[ext_resource type="Texture2D" uid="uid://c4131j14eoeey" path="res://img/nucleo_02/actividad_01/mensaje.png" id="13_ja86i"]
[ext_resource type="PackedScene" uid="uid://bjyhlfqw31xgp" path="res://scenes/actividades/arrastrable.tscn" id="14_8b5na"]
[ext_resource type="Texture2D" uid="uid://bd4136hbodh2f" path="res://img/nucleo_02/actividad_01/arrastrable_camara.png" id="15_iwlqk"]
[ext_resource type="PackedScene" uid="uid://dpc8cgudrxdle" path="res://scenes/actividades/arrastrar_anim.tscn" id="15_njw7b"]
[ext_resource type="Texture2D" uid="uid://be8f7clsiokt6" path="res://img/nucleo_02/actividad_01/arrastrable_flyer.png" id="16_8q0we"]
[ext_resource type="Texture2D" uid="uid://36ye36ysirxy" path="res://img/nucleo_02/actividad_01/arrastrable_diciembre.png" id="17_2lhhd"]

[sub_resource type="Animation" id="Animation_q88wv"]
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_1wei8"]
resource_name = "ayuda_soy_tonto_1"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.436332, 0.0, 0.436332, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6yich"]
_data = {
"RESET": SubResource("Animation_q88wv"),
"ayuda_soy_tonto_1": SubResource("Animation_1wei8")
}

[node name="Actividad01" type="Node2D"]
script = ExtResource("1_bn6hl")

[node name="TitilaFoto" parent="." instance=ExtResource("2_eddk7")]
position = Vector2(118, 132)
scale = Vector2(0.634382, 1.46262)
color = Color(0.913725, 0, 0.490196, 1)

[node name="TitilaFlayer" parent="." instance=ExtResource("2_eddk7")]
position = Vector2(118, 420)
scale = Vector2(0.634382, 1.46262)
color = Color(0.913725, 0, 0.490196, 1)

[node name="TitilaDic" parent="." instance=ExtResource("2_eddk7")]
position = Vector2(118, 712)
scale = Vector2(0.634382, 1.46262)
color = Color(0.913725, 0, 0.490196, 1)

[node name="CombinacionDatos" type="Sprite2D" parent="."]
position = Vector2(876, 536)
texture = ExtResource("2_l1d4a")

[node name="CargandoDatos" type="Sprite2D" parent="CombinacionDatos"]
position = Vector2(9, -54)
texture = ExtResource("3_op6nt")

[node name="TitilaFoto2" parent="CombinacionDatos" instance=ExtResource("2_eddk7")]
position = Vector2(-168, 12)
scale = Vector2(0.251816, 0.560748)
color = Color(0.913725, 0, 0.490196, 0.588235)

[node name="TitilaFlayer2" parent="CombinacionDatos" instance=ExtResource("2_eddk7")]
position = Vector2(-43, 12)
scale = Vector2(0.25, 0.56)
color = Color(0.913725, 0, 0.490196, 0.588235)

[node name="TitilaDic2" parent="CombinacionDatos" instance=ExtResource("2_eddk7")]
position = Vector2(89, 12)
scale = Vector2(0.25, 0.56)
color = Color(0.913725, 0, 0.490196, 0.588235)

[node name="ProgressBar" type="ProgressBar" parent="CombinacionDatos"]
offset_left = -152.0
offset_top = -27.0
offset_right = 172.0
offset_bottom = 14.0
theme = ExtResource("3_4ix6s")
show_percentage = false

[node name="Titila" parent="CombinacionDatos" instance=ExtResource("2_eddk7")]
visible = false
position = Vector2(-76, 286)
scale = Vector2(0.384988, 0.341121)
color = Color(0.913725, 0, 0.490196, 1)

[node name="BotonS" parent="CombinacionDatos" instance=ExtResource("5_omwwq")]
visible = false
offset_left = -59.0
offset_top = 299.0
offset_right = 69.0
offset_bottom = 344.0
color = Color(0.913725, 0, 0.490196, 1)
texto = "ENVIAR"

[node name="DestinoFotografia" parent="CombinacionDatos" instance=ExtResource("6_cqges")]
position = Vector2(-117, 73)
clave = "fotografia"
imagen = ExtResource("7_ags83")

[node name="DestinoFlyer" parent="CombinacionDatos" instance=ExtResource("6_cqges")]
position = Vector2(9, 72)
clave = "flyer"
imagen = ExtResource("8_s6inh")

[node name="DestinoDiciembre" parent="CombinacionDatos" instance=ExtResource("6_cqges")]
position = Vector2(142, 71)
clave = "diciembre"
imagen = ExtResource("9_qb0r0")

[node name="Resultado" type="Sprite2D" parent="CombinacionDatos"]
visible = false
position = Vector2(10, -29)
texture = ExtResource("10_gs1t7")

[node name="ContenedorCamara" type="Sprite2D" parent="."]
position = Vector2(248, 258)
texture = ExtResource("4_gh16w")

[node name="ContenedorFlyer" type="Sprite2D" parent="."]
position = Vector2(248, 549)
texture = ExtResource("6_5u413")

[node name="ContenedorDiciembre" type="Sprite2D" parent="."]
position = Vector2(248, 839)
texture = ExtResource("5_oj36e")

[node name="Mensaje" type="Sprite2D" parent="."]
visible = false
position = Vector2(1551, 391)
texture = ExtResource("13_ja86i")

[node name="Arrastrar" parent="." instance=ExtResource("15_njw7b")]
modulate = Color(0.909804, 0, 0.490196, 1)

[node name="Arrastrables" type="Node2D" parent="."]

[node name="ArrastrableFotografia" parent="Arrastrables" instance=ExtResource("14_8b5na")]
position = Vector2(248, 291)
clave_objetivo = "fotografia"
imagen = ExtResource("15_iwlqk")

[node name="Button" type="Button" parent="Arrastrables/ArrastrableFotografia"]
modulate = Color(1, 1, 1, 0)
light_mask = 4
visibility_layer = 4
offset_left = -94.0
offset_top = -97.0
offset_right = -74.0
offset_bottom = -74.0
scale = Vector2(9.50058, 8.40538)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Arrastrables/ArrastrableFotografia"]
libraries = {
"": SubResource("AnimationLibrary_6yich")
}

[node name="ArrastrableFlyer" parent="Arrastrables" instance=ExtResource("14_8b5na")]
position = Vector2(248, 582)
clave_objetivo = "flyer"
imagen = ExtResource("16_8q0we")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Arrastrables/ArrastrableFlyer"]
libraries = {
"": SubResource("AnimationLibrary_6yich")
}

[node name="Button2" type="Button" parent="Arrastrables/ArrastrableFlyer"]
modulate = Color(1, 1, 1, 0)
light_mask = 4
visibility_layer = 4
offset_left = -94.0
offset_top = -97.0
offset_right = -74.0
offset_bottom = -74.0
scale = Vector2(9.50058, 8.40538)

[node name="ArrastrableDiciembre" parent="Arrastrables" instance=ExtResource("14_8b5na")]
position = Vector2(248, 871)
clave_objetivo = "diciembre"
imagen = ExtResource("17_2lhhd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Arrastrables/ArrastrableDiciembre"]
libraries = {
"": SubResource("AnimationLibrary_6yich")
}

[node name="Button3" type="Button" parent="Arrastrables/ArrastrableDiciembre"]
modulate = Color(1, 1, 1, 0)
light_mask = 4
visibility_layer = 4
offset_left = -94.0
offset_top = -97.0
offset_right = -74.0
offset_bottom = -74.0
scale = Vector2(9.50058, 8.40538)

[node name="TimerAyuda" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[connection signal="pressed" from="CombinacionDatos/BotonS" to="." method="_on_boton_s_pressed"]
[connection signal="posicionado" from="Arrastrables/ArrastrableFotografia" to="." method="_on_arrastrable_posicionado"]
[connection signal="mouse_entered" from="Arrastrables/ArrastrableFotografia/Button" to="." method="_on_button_mouse_entered"]
[connection signal="posicionado" from="Arrastrables/ArrastrableFlyer" to="." method="_on_arrastrable_posicionado"]
[connection signal="mouse_entered" from="Arrastrables/ArrastrableFlyer/Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="posicionado" from="Arrastrables/ArrastrableDiciembre" to="." method="_on_arrastrable_posicionado"]
[connection signal="mouse_entered" from="Arrastrables/ArrastrableDiciembre/Button3" to="." method="_on_button_3_mouse_entered"]
[connection signal="timeout" from="TimerAyuda" to="." method="_on_timer_ayuda_timeout"]
